# pgn2pgc

./: .clang-format  .gitignore  .spell.add  CMakeLists.txt  JOSHDEFS.H  PGN2PGC.IDE  STRPARSE.CPP  chess_2.cpp  chess_2.h  joshdefs.h  list5.cpp  list5.h  memcheck.cpp  memcheck.h  pgngames.pgc  pgngames.pgn  pgnpgc3.cpp  pqueue_2.cpp  pqueue_2.h  readme.txt  stpwatch.cpp  stpwatch.h  strparse.cpp  strparse.h
